work monday halfdone

--- a/Visualisation_Prototype/app/css/app.css
+++ b/Visualisation_Prototype/app/css/app.css
@@ -287,3 +287,10 @@ div.overview-container{
 
 canvas.overview{
 }
+
+div.overview-supertopic-container{
+    pointer-events: none;
+    position: absolute;
+    top:0;
+    left:0;
+}
