--- a/Visualisation_Prototype/app/css/app.css
+++ b/Visualisation_Prototype/app/css/app.css
@@ -276,7 +276,7 @@ div.hexmap-container{
 
 div.overview-container{
 
-    background-color: rgba(240,240,240,0.85);
+    background-color: rgba(240,240,240,1);
     visibility: hidden;
     position: absolute;
     top:0;
@@ -292,4 +292,14 @@ div.overview-supertopic-container{
     position: absolute;
     top:0;
     left:0;
+}
+
+
+div.mouseover-popup-container{
+    pointer-events: none;
+    position: absolute;
+    top:0;
+    left:0;
+    height:100%;
+    width: 100%;
 }
